# egrl

./: .gitignore  Makefile  Makefile.am  README.md  Session.vim  TODO.txt  config.h  configure.ac  count.cpp  count.h  cs_probe.cpp  cs_probe.h  cs_utils.cpp  cs_utils.h  probe.cpp  probe.h  session.two_cols  small.probes.txt  small.reads.csfasta  small.reads.fa  test.cpp  to_cs.rb
Util/: .Alphabet.cpp.swp  .Alphabet.h.swp  .DNADouble.cpp.swp  .DNADouble.h.swp  .DNAString.cpp.swp  .DNAString.h.swp  .SeqReader.h.swp  .Util.cpp.swp  Makefile  Makefile.in  SeqReader.cpp
Util/.deps/: libutil_a-Alphabet.Po  libutil_a-BitChar.Po  libutil_a-BitVector.Po  libutil_a-ClusterReader.Po  libutil_a-Contig.Po  libutil_a-CorrectionThresholds.Po  libutil_a-DNAString.Po  libutil_a-Interval.Po  libutil_a-KmerDistribution.Po  libutil_a-Match.Po  libutil_a-MultiAlignment.Po  libutil_a-MultiOverlap.Po  libutil_a-Pileup.Po  libutil_a-PrimerScreen.Po  libutil_a-Quality.Po  libutil_a-QualityVector.Po  libutil_a-ReadInfoTable.Po  libutil_a-ReadTable.Po  libutil_a-SeqCoord.Po  libutil_a-SeqDAVG.Po  libutil_a-SeqReader.Po  libutil_a-SeqTrie.Po  libutil_a-Stats.Po  libutil_a-StdAlnTools.Po  libutil_a-Util.Po  libutil_a-VCFUtil.Po
sh/: deep_clean.sh  run_valgrind.sh  watch_and_transfer.sh
src/: config.h  count.cpp  count.h  cs_probe.h  cs_utils.h  egrl  egrl.cpp  hits.cpp  hits.h  probe.cpp  probe.h
src/Util/: SeqReader.h
src/playground/: test.cpp
tests/: probes.small.txt  reads.small.fq  small.reads.fa
